--- a/trunk/template/default/article.htm
+++ b/trunk/template/default/article.htm
@@ -60,8 +60,8 @@
             <div class="clearfix"></div>
           </div>
         </div>
-        <div class="comments_list" id="iCMS_comments_list">
-          <!--{iCMS:comment:list display="iframe" appid="1" iid=$article.id}-->
+        <div class="comments_list">
+          <!--{iCMS:comment:list display="default" appid="1" iid=$article.id}-->
         </div>
         <div class="comment_form">
           <!--{iCMS:comment:form ref="true"}-->
