--- a/trunk/template/default/user/agreement.htm
+++ b/trunk/template/default/user/agreement.htm
@@ -12,7 +12,7 @@
   <body>
     <!--{include file="./header.htm"}-->
     <div id="body" class="clearfix">
-      <div class="agreement">
+      <div class="iCMS-agreement-wrap">
         <div class="agr_h"><h1><!--{$site.title}-->网络服务协议</h1></div>
 <pre>1. 接受条款
 <!--{$site.title}-->网及其旗下网站（以下简称“<!--{$site.title}-->”）根据以下服务条款为您提供服务。这些条款可由<!--{$site.title}-->随时更新，且毋须另行通知。<!--{$site.title}-->使用协议（以下简称“使用协议”）一旦发生变动，<!--{$site.title}-->将在网页上公布修改内容。修改后的使用协议一旦在网页上公布即有效代替原来的使用协议。此外，当您使用<!--{$site.title}-->特殊服务时，您和<!--{$site.title}-->应遵守<!--{$site.title}-->随时公布的与该服务相关的指引和规则。前述所有的指引和规则，均构成本使用协议的一部分。
