--- a/trunk/public/ui/iCMS-6.0.0.css
+++ b/trunk/public/ui/iCMS-6.0.0.css
@@ -145,7 +145,7 @@ a, a:hover, a:focus { color: #057AFD; }
 .modal .modal-header { background-color: #1575d5; background-image: -moz-linear-gradient(top, #1d7fe2, #0865c2); background-image: -ms-linear-gradient(top, #1d7fe2, #0865c2); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1d7fe2), to(#0865c2)); background-image: -webkit-linear-gradient(top, #1d7fe2, #0865c2); background-image: -o-linear-gradient(top, #1d7fe2, #0865c2); background-image: linear-gradient(top, #1d7fe2, #0865c2); background-repeat: repeat-x; filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1d7fe2', endColorstr='#0865c2', GradientType=0); padding: 3px 15px; border-radius: 6px 6px 0 0; border: 1px solid #0D6EB8; box-shadow: 0 1px 0 rgba(255, 255, 255, .1) inset, 0 1px 1px rgba(0, 0, 0, .2); margin: -1px -1px 0; line-height: 14px; }
 .modal .modal-header h3 { color: #fff; text-shadow: 0 1px 1px rgba(0, 0, 0, .4); font-size: 15px; font-weight: 700; }
 .modal .modal-footer { padding: 10px 15px; }
-.modal .modal-body { overflow: hidden; margin: 17px 0; padding: 0 15px; max-height: 100%; height: 100%; }
+.modal .modal-body { overflow: hidden; padding: 0px; max-height: 100%; height: 100%; }
 .modal .modal-loading { margin: 10px; }
 .modal-iframe { top: 0px; left: 0px; width: 100%; height: 100%; }
 .modal-iframeFix { top: 0px; left: 0px; width: 100%; height: 100%; background: #fff; position: absolute; opacity: 0.001; zIndex: 1000; display: none; }
@@ -153,13 +153,6 @@ a, a:hover, a:focus { color: #057AFD; }
 .modal-overlayBG { background-color: #000; opacity: 0.3; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)"; filter: alpha(opacity=30); -moz-opacity: 0.3; }
 .modal .buttons { padding: 0 15px; margin-bottom: 15px; text-align: right; background: #fff; }
 /* ============================================================================================= */
-/* iCMS_pagination */
-.iCMS_pagination { margin: 10px; clear: both; height: 30px; }
-.iCMS_pagination a, .iCMS_pagination span { float: left; padding: 4px 12px; line-height: 20px; text-decoration: none; background-color: #fff; border: 1px solid #ddd; border-left-width: 0 }
-.iCMS_pagination a:hover, .iCMS_pagination a:focus { background-color: #f5f5f5 }
-.iCMS_pagination a.page_nowindex { color: #999; cursor: default }
-.iCMS_pagination a:first-child, .iCMS_pagination span:first-child { border-left-width: 1px; -webkit-border-bottom-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px; border-top-left-radius: 4px; -moz-border-radius-bottomleft: 4px; -moz-border-radius-topleft: 4px }
-.iCMS_pagination a:last-child, .iCMS_pagination span:last-child { -webkit-border-top-right-radius: 4px; border-top-right-radius: 4px; -webkit-border-bottom-right-radius: 4px; border-bottom-right-radius: 4px; -moz-border-radius-topright: 4px; -moz-border-radius-bottomright: 4px }
 /* piece
 -------------------------------------------------- */
 .piece { border-radius: 10px; }
@@ -197,39 +190,48 @@ a, a:hover, a:focus { color: #057AFD; }
 url('iconfont/iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */ }
 .iconfont { font-family: "iconfont" !important; font-size: 16px; font-style: normal; -webkit-font-smoothing: antialiased; /* -webkit-text-stroke-width: 0.2px;  */
 -moz-osx-font-smoothing: grayscale; }
+
+/* iCMS-pagination */
+.iCMS-pagination { margin: 10px; clear: both; height: 30px; }
+.iCMS-pagination a, .iCMS-pagination span { float: left; padding: 4px 12px; line-height: 20px; text-decoration: none; background-color: #fff; border: 1px solid #ddd; border-left-width: 0 }
+.iCMS-pagination a:hover, .iCMS-pagination a:focus { background-color: #f5f5f5 }
+.iCMS-pagination a.page_nowindex { color: #999; cursor: default }
+.iCMS-pagination a:first-child, .iCMS-pagination span:first-child { border-left-width: 1px; -webkit-border-bottom-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px; border-top-left-radius: 4px; -moz-border-radius-bottomleft: 4px; -moz-border-radius-topleft: 4px }
+.iCMS-pagination a:last-child, .iCMS-pagination span:last-child { -webkit-border-top-right-radius: 4px; border-top-right-radius: 4px; -webkit-border-bottom-right-radius: 4px; border-bottom-right-radius: 4px; -moz-border-radius-topright: 4px; -moz-border-radius-bottomright: 4px }
+
 /* iCMS.TOP.userinfo
 -------------------------------------------------- */
-.iCMS_hover { display: none; z-index: 999; position: absolute; top: 0; left: 0; min-width: 120px; border-radius: 0 0 3px 3px; background: #FFF; }
+.iCMS-hover { display: none; z-index: 999; position: absolute; top: 0; left: 0; min-width: 120px; border-radius: 0 0 3px 3px; background: #FFF; }
 .hover-toggle .caret { margin-top: 10px; margin-left: 0px; }
-#iCMS_nav_profile { display: none; }
-#iCMS_nav_profile .top_nav_profile { display: inline-block; padding-right: 10px; }
-#iCMS_nav_profile .iCMS_user_home { text-decoration: none; }
-#iCMS_nav_profile .iCMS_user_home .avatar { width: 25px; height: 25px; border: 1px solid rgba(0, 0, 0, .1); box-shadow: 0 1px 0 rgba(255, 255, 255, .1); }
-#iCMS_nav_profile .iCMS_user_home .dropdown-menu>li>a { font-size: 14px; }
+#iCMS-nav-profile { display: none; }
+#iCMS-nav-profile .top_nav_profile { display: inline-block; padding-right: 10px; }
+#iCMS-nav-profile .iCMS-user-home { text-decoration: none; }
+#iCMS-nav-profile .iCMS-user-home .avatar { width: 25px; height: 25px; border: 1px solid rgba(0, 0, 0, .1); box-shadow: 0 1px 0 rgba(255, 255, 255, .1); }
+#iCMS-nav-profile .iCMS-user-home .dropdown-menu>li>a { font-size: 14px; }
 /* iCMS.Login
 -------------------------------------------------- */
-#iCMS_seccode { width: 60px; }
-#iCMS_seccode_img { vertical-align: top; }
-#iCMS_uname { font-size: 12px; }
-#iCMS_login_box { display: none; }
-.iCMS_login_box .login_box { padding: 0 12px 24px; background-color: #fff; }
-.iCMS_login_box .login_form { float: left; padding: 10px 25px 5px 10px; width: 280px; *padding-top: 10px; }
-.iCMS_login_box .login_form dd { float: left; width: 58px; vertical-align: middle; text-align: right; line-height: 26px; }
-.iCMS_login_box .login_form dt { margin-bottom: 15px; height: 26px; color: #666; font-weight: normal; _margin-bottom: 10px; }
-.iCMS_login_box .login_form dt .checkbox { margin: 0px 4px 0px 0px; vertical-align: top; }
-.iCMS_login_box .login_form a { padding-left: 12px; color: #8e8e8e; _margin_bottom: 5px; }
-.iCMS_login_box .register_box { line-height: 16px; }
-.iCMS_login_box .reg_btn { display: block; margin: 10px 0 20px; width: 141px; height: 30px; background: url(img/book_regist.png) no-repeat; cursor: pointer; }
-.iCMS_login_box .lb_bd { width: 560px; }
-.iCMS_login_box .l_o a { display: inline-block; margin: 2px 5px 10px; padding: 0 0 0 19px; background: url(img/login_method_v3.png) no-repeat 0 0; color: #666; line-height: 16px; }
-.iCMS_login_box .login_fail { visibility: hidden; padding-top: 10px; padding-left: 65px; width: 360px; color: #FE2617; }
-.iCMS_login_box .reg_or_weibo { display: inline-block; padding-left: 30px; width: 160px; border-left: 1px solid #c8c8c8; }
-.iCMS_login_box .lb_bd .lb_s { margin: 0 auto; padding: 55px; width: 180px; height: 45px; }
-.iCMS_login_box .lb_bd .lb_s .lb_s_img { display: block; float: left; width: 43px; height: 43px; }
-.iCMS_login_box .lb_bd .lb_s .lb_s_t { display: block; float: left; margin: 12px 0 0 12px; width: 120px; color: #333; font-size: 22px; }
+#iCMS-seccode { width: 60px; }
+#iCMS-seccode-img { vertical-align: top; }
+#iCMS-uname { font-size: 12px; }
+#iCMS-login-box { display: none; }
+.iCMS-login-wrap .login_box { padding: 0 12px 24px; background-color: #fff; }
+.iCMS-login-wrap .login_form { float: left; padding: 10px 25px 5px 10px; width: 280px; *padding-top: 10px; }
+.iCMS-login-wrap .login_form dd { float: left; width: 58px; vertical-align: middle; text-align: right; line-height: 26px; }
+.iCMS-login-wrap .login_form dt { margin-bottom: 15px; height: 26px; color: #666; font-weight: normal; _margin-bottom: 10px; }
+.iCMS-login-wrap .login_form dt .checkbox { margin: 0px 4px 0px 0px; vertical-align: top; }
+.iCMS-login-wrap .login_form a { padding-left: 12px; color: #8e8e8e; _margin_bottom: 5px; }
+.iCMS-login-wrap .register_box { line-height: 16px; }
+.iCMS-login-wrap .reg_btn { display: block; margin: 10px 0 20px; width: 141px; height: 30px; background: url(img/book_regist.png) no-repeat; cursor: pointer; }
+.iCMS-login-wrap .lb_bd { width: 560px; }
+.iCMS-login-wrap .l_o a { display: inline-block; margin: 2px 5px 10px; padding: 0 0 0 19px; background: url(img/login_method_v3.png) no-repeat 0 0; color: #666; line-height: 16px; }
+.iCMS-login-wrap .login_fail {font-size: 12px;visibility: hidden; padding-top: 10px; padding-left: 65px; width: 360px; color: #FE2617; }
+.iCMS-login-wrap .reg_or_weibo { display: inline-block; padding-left: 30px; width: 160px; border-left: 1px solid #c8c8c8; }
+.iCMS-login-wrap .lb_bd .lb_s { margin: 0 auto; padding: 55px; width: 180px; height: 45px; }
+.iCMS-login-wrap .lb_bd .lb_s .lb_s_img { display: block; float: left; width: 43px; height: 43px; }
+.iCMS-login-wrap .lb_bd .lb_s .lb_s_t { display: block; float: left; margin: 12px 0 0 12px; width: 120px; color: #333; font-size: 22px; }
 /* iCMS/comment
 -------------------------------------------------- */
-.iCMS_API_iframe { width: 100%; }
+.iCMS-API-iframe { width: 100%; }
 .iCMS-comment-wrap { margin: 0px auto 20px auto; width: 600px; font-size: 14px; }
 .iCMS-comment-wrap .alert { margin-bottom: 10px; padding: 4px 10px; font-size: 12px; }
 .iCMS-comment-editor { }
@@ -237,7 +239,7 @@ url('iconfont/iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */ }
 .iCMS-comment-command { }
 .iCMS-comment-command .btn { float: right; margin: 8px 0px 8px 8px; padding: 5px 10px; }
 /*--------*/
-#iCMS_comment_report { display: none; }
+#iCMS-comment-report { display: none; }
 .report_dialog {}
 .report_dialog.loading .modal-dialog-buttons { display: none }
 .report_dialog .options { margin-top: 8px }
@@ -259,6 +261,6 @@ url('iconfont/iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */ }
 
 /* iCMS/user.agreement.htm
 -------------------------------------------------- */
-.agreement { padding-right: 40px; padding-left: 40px; width: 880px; _width: 880px; }
-.agreement .agr_h { margin-bottom: 50px; text-align: center; font-weight: bold; font-size: 26px; }
-.agreement pre { font-size: 12px; width: 99%; color: #666; padding: 10px; white-space: pre-wrap; white-space: -moz-pre-wrap !important; white-space: -pre-wrap; white-space: -o-pre-wrap; word-wrap: break-word; }
+.iCMS-agreement-wrap { padding-right: 40px; padding-left: 40px; width: 880px; _width: 880px; }
+.iCMS-agreement-wrap .agr_h { margin-bottom: 50px; text-align: center; font-weight: bold; font-size: 26px; }
+.iCMS-agreement-wrap pre { font-size: 12px; width: 99%; color: #666; padding: 10px; white-space: pre-wrap; white-space: -moz-pre-wrap !important; white-space: -pre-wrap; white-space: -o-pre-wrap; word-wrap: break-word; }
