--- a/trunk/template/iCMS/comment/form.default.htm
+++ b/trunk/template/iCMS/comment/form.default.htm
@@ -6,11 +6,11 @@
 		<!--{iCMS:public:ui script="false"}-->
 		<script>
 		$(function(){
-		$('.iCMS_LoginBox').on("click", function() {
-			event.preventDefault();
-			window.parent.iCMS.LoginBox();
-			return false;
-		});
+			$('.iCMS-user-login').on("click", function() {
+				event.preventDefault();
+				window.parent.iCMS.LoginBox();
+				return false;
+			});
 		})
 		</script>
 	</head>
@@ -20,7 +20,7 @@
 			<div class="iCMS-comment-user clearfix">
 			</div>
 			<div class="iCMS-comment-login clearfix mb10">
-				<a href="<!--{iCMS:router url='/api/user/login'}-->" class="iCMS_LoginBox" title="登录"><i class="fa fa-user"></i> 登录</a>
+				<a href="<!--{iCMS:router url='/api/user/login'}-->" class="iCMS-user-login" title="登录"><i class="fa fa-user"></i> 登录</a>
 				<a href="<!--{iCMS:router url='/api/user/register'}-->" target="_blank"><i class="fa fa-heart"></i> 注册</a>
 			</div>
 			<div class="alert">
